--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "autoprefixer": "10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "9.16.0",
     "eslint-config-next": "15.0.3",
+    "lucide-react": "^0.464.0",
     "next": "15.0.3",
+    "next-themes": "^0.4.3",
     "postcss": "8.4.49",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tailwindcss": "3.4.15"
+    "sonner": "^1.7.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss": "3.4.15",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
