--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "9.16.0",
     "eslint-config-next": "15.0.3",
     "lucide-react": "^0.464.0",
+    "mongoose": "^8.8.3",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "postcss": "8.4.49",
