--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.1",
     "eslint": "9.16.0",
     "eslint-config-next": "15.0.3",
     "lucide-react": "^0.464.0",
