--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "autoprefixer": "10.4.20",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.1",
     "eslint": "9.16.0",
     "eslint-config-next": "15.0.3",
     "lucide-react": "^0.464.0",
     "mongoose": "^8.8.3",
     "next": "15.0.3",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.3",
     "postcss": "8.4.49",
     "react": "18.3.1",
