--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss": "8.4.49",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-icons": "^5.4.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.15",
