--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@stripe/stripe-js": "^5.3.0",
     "autoprefixer": "10.4.20",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -36,6 +37,7 @@
     "react-dom": "18.3.1",
     "react-icons": "^5.4.0",
     "sonner": "^1.7.0",
+    "stripe": "^17.5.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.15",
     "tailwindcss-animate": "^1.0.7"
