--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.4.0",
+    "resend": "^4.0.1",
     "sonner": "^1.7.0",
     "stripe": "^17.5.0",
     "tailwind-merge": "^2.5.5",
